--- a/src/features/menu/components/ItemList/ItemList.module.css
+++ b/src/features/menu/components/ItemList/ItemList.module.css
@@ -1,6 +1,6 @@
 .menu-section-grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
+	grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
 	grid-template-rows: repeat(aut-fit, minmax(500px, 500px));
 	grid-auto-rows: auto;
 	height: 100%;
